--- a/_config.yml
+++ b/_config.yml
@@ -78,19 +78,21 @@ menu:
   # Use these to customise the main navigation.
   - home: /home
     translation_key: Home
+  - path: /guidance
+    translation_key: menu.guidance
   - path: /reporting-status
     # The "translation_key" refers to the key in the SDG Translations repository.
     translation_key: menu.reporting_status
-  - path: /about
-    translation_key: menu.about
-  - path: /guidance
-    translation_key: menu.guidance
-  - path: /faq
-    translation_key: menu.faq
-  - path: /news
-    translation_key: menu.updates
   - path: https://statinja.gov.jm/sdg.aspx#/Reports
     translation_key: Reports
+  - path: /news
+    translation_key: menu.updates
+#  - path: /about
+#    translation_key: menu.about
+  - path: /faq
+    translation_key: menu.faq
+
+
 
 footer_menu:
   - path: mailto:my-email-address@example.com
